WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175675
-Wreturn-type warnings in CryptoKey.cpp and SubtleCrypto.cpp
https://bugs.webkit.org/show_bug.cgi?id=175675
Summary
-Wreturn-type warnings in CryptoKey.cpp and SubtleCrypto.cpp
Michael Catanzaro
Reported
2017-08-17 09:23:11 PDT
Some new warnings: [2743/5943] Building CXX object Source...les/WebCore.dir/crypto/CryptoKey.cpp.o ../../Source/WebCore/crypto/CryptoKey.cpp: In member function ‘WebCore::CryptoKey::AlgorithmVariant WebCore::CryptoKey::algorithm() const’: ../../Source/WebCore/crypto/CryptoKey.cpp:70:1: warning: control reaches end of non-void function [-Wreturn-type] } ^ [2780/5943] Building CXX object Source.../WebCore.dir/crypto/SubtleCrypto.cpp.o ../../Source/WebCore/crypto/SubtleCrypto.cpp: In function ‘WebCore::CryptoKeyUsageBitmap WebCore::toCryptoKeyUsageBitmap(WebCore::CryptoKeyUsage)’: ../../Source/WebCore/crypto/SubtleCrypto.cpp:397:1: warning: control reaches end of non-void function [-Wreturn-type] } ^ ../../Source/WebCore/crypto/SubtleCrypto.cpp: In function ‘std::optional<WTF::Variant<WTF::Vector<unsigned char, 0, WTF::CrashOnOverflow, 16>, WebCore::JsonWebKey> > WebCore::toKeyData(WebCore::SubtleCrypto::KeyFormat, WebCore::SubtleCrypto::KeyDataVariant&&, WTF::Ref<WebCore::DeferredPromise>&)’: ../../Source/WebCore/crypto/SubtleCrypto.cpp:479:1: warning: control reaches end of non-void function [-Wreturn-type] } ^
Attachments
Patch
(2.12 KB, patch)
2017-08-17 09:26 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-08-17 09:26:13 PDT
Created
attachment 318374
[details]
Patch
Jiewen Tan
Comment 2
2017-08-17 11:48:42 PDT
Comment on
attachment 318374
[details]
Patch Looks good to me. r=me. Nice!
WebKit Commit Bot
Comment 3
2017-08-17 14:17:38 PDT
Comment on
attachment 318374
[details]
Patch Clearing flags on attachment: 318374 Committed
r220876
: <
http://trac.webkit.org/changeset/220876
>
WebKit Commit Bot
Comment 4
2017-08-17 14:17:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-08-17 14:18:59 PDT
<
rdar://problem/33949830
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug