-Wreturn-type warnings in CryptoKey.cpp and SubtleCrypto.cpp https://bugs.webkit.org/show_bug.cgi?id=175675

Reviewed by Jiewen Tan.

* crypto/CryptoKey.cpp:
(WebCore::CryptoKey::algorithm const):
* crypto/SubtleCrypto.cpp:
(WebCore::toCryptoKeyUsageBitmap):
(WebCore::toKeyData):


Canonical link: https://commits.webkit.org/192347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220876 268f45cc-cd09-0410-ab3c-d52691b4dbfc